--- a/Bookkeeper-CharGen-JSF/WebContent/WEB-INF/web.xml
+++ b/Bookkeeper-CharGen-JSF/WebContent/WEB-INF/web.xml
@@ -16,7 +16,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>Faces Servlet</servlet-name>
-    <url-pattern>/faces/*</url-pattern>
+    <url-pattern>*.faces</url-pattern>
   </servlet-mapping>
   <context-param>
     <param-name>org.richfaces.SKIN</param-name>
