--- a/Bookkeeper-StaticDataService/.project
+++ b/Bookkeeper-StaticDataService/.project
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Timadorus-WebApp</name>
+	<name>Bookkeeper-StaticDataService</name>
 	<comment></comment>
 	<projects>
-		<project>Bookkeeper</project>
-		<project>Bookkeeper-CharGen-EJB</project>
-		<project>Bookkeeper-CharGen-JSF</project>
-		<project>HarperHallUtil</project>
-		<project>Bookkeeper-StaticDataService</project>
 	</projects>
 	<buildSpec>
+		<buildCommand>
+			<name>org.eclipse.jdt.core.javabuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
 		<buildCommand>
 			<name>org.eclipse.wst.common.project.facet.core.builder</name>
 			<arguments>
@@ -23,6 +23,8 @@
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.wst.common.project.facet.core.nature</nature>
+		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.wst.common.modulecore.ModuleCoreNature</nature>
+		<nature>org.eclipse.jem.workbench.JavaEMFNature</nature>
 	</natures>
 </projectDescription>
