git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/timadorus/webapp/trunk@229 aa37ab44-2659-0410-8a83-c73d69c9b566

--- a/Bookkeeper-CharGen-EJB/.project
+++ b/Bookkeeper-CharGen-EJB/.project
@@ -3,6 +3,8 @@
 	<name>Bookkeeper-CharGen-EJB</name>
 	<comment></comment>
 	<projects>
+		<project>Bookkeeper</project>
+		<project>HarperHallUtil</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
