--- a/Bookkeeper-CharGen-EJB/.settings/org.eclipse.jdt.core.prefs
+++ b/Bookkeeper-CharGen-EJB/.settings/org.eclipse.jdt.core.prefs
@@ -1,4 +1,4 @@
-#Tue Feb 10 15:26:51 CET 2009
+#Mon May 04 11:27:37 CEST 2009
 eclipse.preferences.version=1
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.6
 org.eclipse.jdt.core.compiler.compliance=1.6
