--- a/Bookkeeper-CharGen-JSF/.project
+++ b/Bookkeeper-CharGen-JSF/.project
@@ -3,6 +3,7 @@
 	<name>Bookkeeper-CharGen-JSF</name>
 	<comment></comment>
 	<projects>
+		<project>Bookkeeper-CharGen-EJB</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
