--- a/Bookkeeper-CharGen-JSF/.settings/org.eclipse.jst.common.project.facet.core.prefs
+++ b/Bookkeeper-CharGen-JSF/.settings/org.eclipse.jst.common.project.facet.core.prefs
@@ -1,4 +1,3 @@
-#Tue Feb 10 11:52:39 CET 2009
-classpath.helper/org.eclipse.jdt.launching.JRE_CONTAINER\:\:org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType\:\:jdk1.6.0_04/owners=jst.java\:5.0
-classpath.helper/org.eclipse.jst.server.core.container\:\:org.eclipse.jst.server.generic.runtimeTarget\:\:JBoss\ v5.0/owners=jst.web\:2.5
+#Mon May 11 14:33:43 CEST 2009
+classpath.helper/org.eclipse.jdt.launching.JRE_CONTAINER\:\:org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType\:\:jre6/owners=jst.java\:6.0
 eclipse.preferences.version=1
