--- a/Bookkeeper-CharGen-EJB/.settings/org.eclipse.jst.common.project.facet.core.prefs
+++ b/Bookkeeper-CharGen-EJB/.settings/org.eclipse.jst.common.project.facet.core.prefs
@@ -1,4 +1,3 @@
-#Tue Feb 10 15:26:51 CET 2009
-classpath.helper/org.eclipse.jdt.launching.JRE_CONTAINER\:\:org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType\:\:jdk1.6.0_04/owners=jst.java\:6.0
-classpath.helper/org.eclipse.jst.server.core.container\:\:org.eclipse.jst.server.generic.runtimeTarget\:\:JBoss\ v5.0/owners=jst.ejb\:3.0
+#Tue May 19 16:52:17 CEST 2009
+classpath.helper/org.eclipse.jdt.launching.JRE_CONTAINER\:\:org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType\:\:jdk1.6.0_07/owners=jst.java\:6.0
 eclipse.preferences.version=1
