--- a/Bookkeeper-CharGen-EJB/.classpath
+++ b/Bookkeeper-CharGen-EJB/.classpath
@@ -270,6 +270,7 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="../"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/com.sun.enterprise.jst.server.runtimeTarget/GlassFish v2.1 Java EE 5"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.6.0_07"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
