--- a/Bookkeeper-CharGen-JSF/.project
+++ b/Bookkeeper-CharGen-JSF/.project
@@ -4,6 +4,7 @@
 	<comment></comment>
 	<projects>
 		<project>Bookkeeper-CharGen-EJB</project>
+		<project>Bookkeeper</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
