--- a/Bookkeeper-CharGen-JSF/.settings/org.eclipse.jst.common.project.facet.core.prefs
+++ b/Bookkeeper-CharGen-JSF/.settings/org.eclipse.jst.common.project.facet.core.prefs
@@ -1,3 +1,3 @@
-#Mon May 11 14:33:43 CEST 2009
-classpath.helper/org.eclipse.jdt.launching.JRE_CONTAINER\:\:org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType\:\:jre6/owners=jst.java\:6.0
+#Thu May 28 17:16:25 CEST 2009
+classpath.helper/org.eclipse.jdt.launching.JRE_CONTAINER\:\:org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType\:\:jre1.6.0_12/owners=jst.java\:6.0
 eclipse.preferences.version=1
