--- a/Bookkeeper-CharGen-EJB/.settings/org.eclipse.jst.common.project.facet.core.prefs
+++ b/Bookkeeper-CharGen-EJB/.settings/org.eclipse.jst.common.project.facet.core.prefs
@@ -1,4 +1,3 @@
-#Tue May 19 17:28:56 CEST 2009
-classpath.helper/org.eclipse.jdt.launching.JRE_CONTAINER\:\:org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType\:\:jdk1.6.0_07/owners=jst.java\:6.0
-classpath.helper/org.eclipse.jst.server.core.container\:\:com.sun.enterprise.jst.server.runtimeTarget\:\:GlassFish\ v2.1\ Java\ EE\ 5/owners=jst.ejb\:3.0
+#Thu May 28 18:13:26 CEST 2009
+classpath.helper/org.eclipse.jdt.launching.JRE_CONTAINER\:\:org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType\:\:jre1.6.0_12/owners=jst.java\:6.0
 eclipse.preferences.version=1
