--- a/Bookkeeper-CharGen-JSF/.settings/org.eclipse.jst.common.project.facet.core.prefs
+++ b/Bookkeeper-CharGen-JSF/.settings/org.eclipse.jst.common.project.facet.core.prefs
@@ -1,3 +1,3 @@
-#Thu May 28 19:04:19 CEST 2009
-classpath.helper/org.eclipse.jdt.launching.JRE_CONTAINER\:\:org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType\:\:jre1.6.0_12/owners=jst.java\:6.0
+#Tue Jun 02 15:55:41 CEST 2009
+classpath.helper/org.eclipse.jdt.launching.JRE_CONTAINER\:\:org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType\:\:jdk1.6.0_07/owners=jst.java\:6.0
 eclipse.preferences.version=1
