--- a/Bookkeeper-CharGen-EJB/.classpath
+++ b/Bookkeeper-CharGen-EJB/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="ejbModule"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry exported="true" kind="src" path="/Bookkeeper"/>
 	<classpathentry exported="true" kind="lib" path="/Bookkeeper/lib/ejb3-persistence.jar">
 		<attributes>
