--- a/BookkeeperWebApp/.project
+++ b/BookkeeperWebApp/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>BookkeeperWebApp</name>
+	<name>TimadorusWebApp</name>
 	<comment></comment>
 	<projects>
 	</projects>
