--- a/BookkeeperWebApp/war/WEB-INF/web.xml
+++ b/BookkeeperWebApp/war/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 
   <!-- Default page to serve -->
   <welcome-file-list>
-    <welcome-file>BookkeeperWebApp.html</welcome-file>
+    <welcome-file>TimadorusWebApp.html</welcome-file>
   </welcome-file-list>
   
   <!-- Servlets -->
@@ -28,16 +28,16 @@
 
   <servlet-mapping>
     <servlet-name>session</servlet-name>
-    <url-pattern>/bookkeeperwebapp/session</url-pattern>
+    <url-pattern>/timadoruswebapp/session</url-pattern>
   </servlet-mapping>
   
   <servlet-mapping>
     <servlet-name>login</servlet-name>
-    <url-pattern>/bookkeeperwebapp/login</url-pattern>
+    <url-pattern>/timadoruswebapp/login</url-pattern>
   </servlet-mapping>
   
   <servlet-mapping>
     <servlet-name>register</servlet-name>
-    <url-pattern>/bookkeeperwebapp/register</url-pattern>
+    <url-pattern>/timadoruswebapp/register</url-pattern>
   </servlet-mapping>
 </web-app>
