servlet mapping update
git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/timadorus/webapp/trunk@422 aa37ab44-2659-0410-8a83-c73d69c9b566

--- a/TimadorusWebApp/war/WEB-INF/web.xml
+++ b/TimadorusWebApp/war/WEB-INF/web.xml
@@ -13,17 +13,17 @@
   <!-- Servlets -->
   <servlet>
     <servlet-name>session</servlet-name>
-    <servlet-class>org.timadorus.webapp.server.rpc.service.SessionServiceImpl</servlet-class>
+    <servlet-class>org.timadorus.webapp.server.servicesimpl.session</servlet-class>
   </servlet>
   
   <servlet>
     <servlet-name>login</servlet-name>
-    <servlet-class>org.timadorus.webapp.server.rpc.service.LoginServiceImpl</servlet-class>
+    <servlet-class>org.timadorus.webapp.server.servicesimpl.login</servlet-class>
   </servlet>
   
   <servlet>
     <servlet-name>register</servlet-name>
-    <servlet-class>org.timadorus.webapp.server.rpc.service.RegisterServiceImpl</servlet-class>
+    <servlet-class>org.timadorus.webapp.server.servicesimpl.registeruser.RegisterServiceImpl</servlet-class>
   </servlet>
 
   <servlet-mapping>
