add CreateCharacterServlet to DeploymentDescriptor web.xml for Debugging
git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/timadorus/webapp/branches/with_usability_refactored@705 aa37ab44-2659-0410-8a83-c73d69c9b566

--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -40,4 +40,14 @@
     <servlet-name>register</servlet-name>
     <url-pattern>/timadoruswebapp/register</url-pattern>
   </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>createCharacter</servlet-name>
+    <servlet-class>org.timadorus.webapp.server.rpc.service.CreateCharacterServiceImpl</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+    <servlet-name>createCharacter</servlet-name>
+    <url-pattern>/timadoruswebapp/createCharacter</url-pattern>
+  </servlet-mapping>
 </web-app>
