--- a/ivy.xml
+++ b/ivy.xml
@@ -1,11 +1,7 @@
 <ivy-module version="2.0">
     <info organisation="timadorus" module="web-app"/>
     <dependencies>
-		<dependency org="google" name="gwt" rev="2.0.3" />
-		<dependency org="google" name="app-engine" rev="1.3.6" />
+		<dependency org="com.google" name="gwt" rev="2.0.4" />
+		<dependency org="com.google" name="app-engine" rev="1.3.6" />
     </dependencies>
 </ivy-module>
-
-<!--  maven dependencies to be cleaned up
-
--->
