--- a/.settings/com.google.gdt.eclipse.core.prefs
+++ b/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,3 +1,5 @@
-#Mon Nov 02 13:24:41 CET 2009
+#Mon Oct 18 17:56:46 CEST 2010
 eclipse.preferences.version=1
 jarsExcludedFromWebInfLib=
+warSrcDir=war
+warSrcDirIsOutput=true
