add dependency on datanucleus (will provide the JPA and JDO interfaces)
git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/timadorus/webapp/trunk@1049 aa37ab44-2659-0410-8a83-c73d69c9b566

--- a/ivy.xml
+++ b/ivy.xml
@@ -2,5 +2,6 @@
     <info organisation="timadorus" module="web-app"/>
     <dependencies>
 		<dependency org="com.google" name="gwt" rev="2.0.4" />
+		<dependency org="org.datanucleus" name="datanucleus-rdbms" rev="2.2.0-m1" conf="*->provided"/>
     </dependencies>
 </ivy-module>
