- added enhance call to build.xml - added ivy.xml
git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/timadorus/webapp/branches/with_plain_nucleus_and_derby@1073 aa37ab44-2659-0410-8a83-c73d69c9b566

--- a/build.xml
+++ b/build.xml
@@ -76,5 +76,5 @@
 		</datanucleusenhancer>
 	</target>
 
-	<target name="build" depends="resolve,java-compile" />
+	<target name="build" depends="resolve,java-compile,enhance" />
 </project>
