--- a/.project
+++ b/.project
@@ -27,6 +27,7 @@
 		<nature>com.google.gdt.eclipse.core.webAppNature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
+		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.apache.derby.ui.derbyEngine</nature>
 	</natures>
 </projectDescription>
