--- a/build.xml
+++ b/build.xml
@@ -20,7 +20,7 @@
 
 	<path id="TimadorusWebApp.classpath">
 		<pathelement location="${sourceDir}" />
-		<fileset dir="lib/">
+		<fileset dir="war/WEB-INF/lib/">
 			<include name="*.jar" />
 		</fileset>
 		<pathelement location="${destination}" />
