Added java-compile to ant build file and removed invalid character in SelectSkillPanel
git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/timadorus/webapp/branches/with_plain_nucleus_and_derby@1101 aa37ab44-2659-0410-8a83-c73d69c9b566

--- a/build.xml
+++ b/build.xml
@@ -86,5 +86,5 @@
 		</sequential>
 	</macrodef>
 
-	<target name="build" depends="resolve,gwt-compile,enhance" />
+	<target name="build" depends="resolve,java-compile,gwt-compile,enhance" />
 </project>
