failonerror="false" for deleting of jars in build.xml because deleting of jars not possible while eclipse is running
git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/timadorus/webapp/trunk@1129 aa37ab44-2659-0410-8a83-c73d69c9b566

--- a/build.xml
+++ b/build.xml
@@ -50,7 +50,7 @@
 
 	<target name="clean">
 		<delete dir="${destination}" />
-		<delete dir="${destinationLib}" />
+		<delete dir="${destinationLib}" failonerror="false" />
 	</target>
 
 	<target depends="clean" name="cleanall" />
