gwt-compile now after enhancement in build.xml
git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/timadorus/webapp/trunk@1141 aa37ab44-2659-0410-8a83-c73d69c9b566

--- a/build.xml
+++ b/build.xml
@@ -89,5 +89,5 @@
 		</sequential>
 	</macrodef>
 
-	<target name="build" depends="resolve,java-compile,gwt-compile,enhance" />
+	<target name="build" depends="resolve,java-compile,enhance,gwt-compile" />
 </project>
