--- a/.classpath
+++ b/.classpath
@@ -9,9 +9,6 @@
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry exported="true" kind="con" path="DERBY_CONTAINER"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/asm-3.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/commons-collections-3.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/commons-dbcp-1.2.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/commons-pool-1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/datanucleus-cache-2.1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/datanucleus-connectionpool-2.0.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/datanucleus-core-2.1.3.jar"/>
@@ -40,5 +37,8 @@
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/log4j-1.2.14.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/time-api-0.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/transaction-api-1.1.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-collections-3.1.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-dbcp-1.2.1.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-pool-1.2.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
