derby now started automatically, derby downloaded with ivy
git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/timadorus/webapp/trunk@1166 aa37ab44-2659-0410-8a83-c73d69c9b566

--- a/build.xml
+++ b/build.xml
@@ -29,7 +29,7 @@
 	     let ivy handle depencies to other projects                   
 	     ================================= -->
 	<target name="resolve" description="--> retrieve dependencies with ivy">
-		<ivy:cleancache />
+		<!--ivy:cleancache /-->
 		<ivy:settings file="${ivy.settings.file}" />
 		<ivy:retrieve />
 	</target>
