--- a/.classpath
+++ b/.classpath
@@ -7,7 +7,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry exported="true" kind="con" path="DERBY_CONTAINER"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/asm-3.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/datanucleus-core-2.1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/datanucleus-enhancer-2.1.2.jar"/>
@@ -35,9 +34,9 @@
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/datanucleus-management-1.0.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/datanucleus-spatial-2.1.0-release.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/datanucleus-xmltypeoracle-2.0.0-release.jar"/>
-	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/derby.jar"/>
-	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/derbyclient.jar"/>
-	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/derbynet.jar"/>
-	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/derbytools.jar"/>
+	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/derby-10.6.2.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/derbyclient-10.6.2.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/derbynet-10.6.2.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/derbytools-10.6.2.1.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
